fix some color contrasts'

--- a/style.css
+++ b/style.css
@@ -452,10 +452,10 @@ a:hover {
 .testimonial-disclosure{
   font-style: normal;
   font-size: 15px;
-  opacity: 0.4;
+  /* opacity: 0.4; */
   margin-top: 20px;
   text-align: center;
-
+  color: #757575;
 }
 
 .testimonial-company img{
